# embedded-fooz

./: .gitignore  CMakeLists.txt  README.md  embedded-fooz.sh  functions.sh  io.sh  score.txt  tui.sh  variables.sh
src/: constants.h  curses.c  curses.h  io.c  io.h  main.c
